--- a/src/components/StartCard/StartCard.module.scss
+++ b/src/components/StartCard/StartCard.module.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   position: relative;
   width: 100%;
-  height: 100dvh;
+  height: 100svh;
   max-height: 1000px;
 
   background-image: url('../../assets/img/alina.jpg');
