--- a/src/components/DatetimeCard/DatetimeCard.module.scss
+++ b/src/components/DatetimeCard/DatetimeCard.module.scss
@@ -9,6 +9,11 @@
   justify-content: end;
   align-items: center;
   gap: 20px;
+
+  @media (max-width: 700px) {
+    width: auto;
+    margin: 0 20px;
+  }
 }
 
 .hr {
