--- a/src/components/StartCard/StartCard.module.scss
+++ b/src/components/StartCard/StartCard.module.scss
@@ -7,10 +7,15 @@
   height: 100svh;
   max-height: 1000px;
 
-  background-image: url('../../assets/img/alina.jpg');
+  background-image:
+          linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+          url('../../assets/img/alina.jpg');
   background-repeat: no-repeat;
-  background-position: center;
   background-size: cover;
+
+  @media (max-width: 700px) {
+    background-position: 30% center;
+  }
 }
 
 .date {
