--- a/src/components/ui/Text/Text.module.scss
+++ b/src/components/ui/Text/Text.module.scss
@@ -7,7 +7,14 @@
   }
 
   &.sm {
+    font-size: 23px;
+    line-height: 30px;
+    letter-spacing: 1px;
 
+    @media (max-width: 700px) {
+      font-size: 18px;
+      line-height: 24px;
+    }
   }
 
   &.md {
@@ -44,5 +51,17 @@
 
   &.error {
     color: red;
+  }
+
+  &.normal {
+    font-weight: 500;
+  }
+
+  &.medium {
+    font-weight: 600;
+  }
+
+  &.bold {
+    font-weight: 700;
   }
 }
